force-app/main/default/objects/numm__Entity__c/numm__Entity__c.object-meta.xml
<CustomObject>
    <description>Objet des entités</description>
    <label>Entité</label>
    <nameField>
        <label>Entité</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entités</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>