force-app/main/default/objects/numm__Entity__c/fields/numm__Capital__c.field-meta.xml
<CustomField>
    <fullName>numm__Capital__c</fullName>
    <description>Montant du Capital</description>
    <label>Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>