force-app/main/default/objects/numm__Entity__c/fields/numm__EntityCode__c.field-meta.xml
<CustomField>
    <fullName>numm__EntityCode__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Code de l&#39;entité pour des logiciels externes</inlineHelpText>
    <label>Code Entité externe</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>