force-app/main/default/objects/numm__Entity__c/fields/numm__GestionProprietaires__c.field-meta.xml
<CustomField>
    <fullName>numm__GestionProprietaires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gestion des propriétaires</label>
    <type>Checkbox</type>
</CustomField>