force-app/main/default/objects/numm__Entity__c/fields/numm__IdCurrency__c.field-meta.xml
<CustomField>
    <fullName>numm__IdCurrency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Devise</description>
    <label>Devise</label>
    <referenceTo>numm__currency__c</referenceTo>
    <relationshipName>Entities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>