force-app/main/default/objects/numm__Entity__c/fields/numm__IsCostAccounting__c.field-meta.xml
<CustomField>
    <fullName>numm__IsCostAccounting__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Société suivi par analytique</description>
    <inlineHelpText>Cocher la case lorsque la société souhaite saisir de l&#39;analytique</inlineHelpText>
    <label>Suivi Analytique</label>
    <type>Checkbox</type>
</CustomField>