force-app/main/default/objects/numm__Entity__c/fields/numm__LegalForm__c.field-meta.xml
<CustomField>
    <fullName>numm__LegalForm__c</fullName>
    <description>Forme Juridique</description>
    <label>Forme juridique</label>
    <length>35</length>
    <type>Text</type>
</CustomField>