force-app/main/default/objects/numm__Entity__c/fields/numm__Logo__c.field-meta.xml
<CustomField>
    <fullName>numm__Logo__c</fullName>
    <label>Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>