force-app/main/default/objects/numm__Entity__c/fields/numm__MasterEntity__c.field-meta.xml
<CustomField>
    <fullName>numm__MasterEntity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cocher cette case lorsque vous voulez gérer la création des tiers et des roles mutli-entites</inlineHelpText>
    <label>Entité Maitre</label>
    <type>Checkbox</type>
</CustomField>