force-app/main/default/objects/numm__Entity__c/fields/numm__PeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>numm__PeriodEnd__c</fullName>
    <description>Date de fin d&#39;exercice</description>
    <inlineHelpText>Saisir la date de fin d&#39;exercice comptable</inlineHelpText>
    <label>Date de fin d&#39;exercice</label>
    <required>true</required>
    <type>Date</type>
</CustomField>