force-app/main/default/objects/numm__Entity__c/fields/numm__PeriodStart__c.field-meta.xml
<CustomField>
    <fullName>numm__PeriodStart__c</fullName>
    <description>Date de début d&#39;exercice</description>
    <inlineHelpText>Saisir la date du début d&#39;exercice comptable</inlineHelpText>
    <label>Date de début d&#39;exercice</label>
    <required>true</required>
    <type>Date</type>
</CustomField>