force-app/main/default/objects/numm__Entity__c/fields/numm__RegistreCommerce__c.field-meta.xml
<CustomField>
    <fullName>numm__RegistreCommerce__c</fullName>
    <label>Registre de commerce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>