force-app/main/default/objects/numm__Entity__c/fields/numm__Siren__c.field-meta.xml
<CustomField>
    <fullName>numm__Siren__c</fullName>
    <label>Siren</label>
    <length>255</length>
    <type>Text</type>
</CustomField>