force-app/main/default/objects/numm__Entity__c/fields/numm__Symbol__c.field-meta.xml
<CustomField>
    <fullName>numm__Symbol__c</fullName>
    <formula>numm__IdCurrency__r.numm__Symbole__c</formula>
    <label>Symbole Devise</label>
    <type>Text</type>
</CustomField>