force-app/main/default/objects/numm__Entity__c/fields/numm__TaxRegimes__c.field-meta.xml
<CustomField>
    <fullName>numm__TaxRegimes__c</fullName>
    <inlineHelpText>Sélectionner le régime de TVA dont bénéficie la société.</inlineHelpText>
    <label>Régime de TVA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Débit</fullName>
                <default>true</default>
                <label>Débit</label>
            </value>
            <value>
                <fullName>Encaissement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>