force-app/main/default/objects/numm__Entity__c/fields/numm__Unite_Temps__c.field-meta.xml
<CustomField>
    <fullName>numm__Unite_Temps__c</fullName>
    <inlineHelpText>Unité de temps pour les feuilles de temps</inlineHelpText>
    <label>Unité de temps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heure</fullName>
                <default>true</default>
                <label>Heure</label>
            </value>
            <value>
                <fullName>Journée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>