force-app/main/default/objects/numm__Entity__c/validationRules/numm__EntityPeriodStartEnd.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__EntityPeriodStartEnd</fullName>
    <active>true</active>
    <description>La date de fin de période doit être supérieure à la date de début de période</description>
    <errorConditionFormula>numm__PeriodStart__c &gt;=  numm__PeriodEnd__c</errorConditionFormula>
    <errorDisplayField>numm__PeriodStart__c</errorDisplayField>
    <errorMessage>La date de début d&#39;exercice doit être inférieure à la date de fin d&#39;exercice.</errorMessage>
</ValidationRule>