force-app/main/default/objects/numm__Entity__c/listViews/numm__All.listView-meta.xml
<ListView>
    <fullName>numm__All</fullName>
    <columns>NAME</columns>
    <columns>numm__Description__c</columns>
    <columns>numm__PeriodStart__c</columns>
    <columns>numm__PeriodEnd__c</columns>
    <columns>numm__IsCostAccounting__c</columns>
    <columns>numm__TaxRegimes__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>